--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -1,3 +1,77 @@
 .main {
     color: blue;
 }
+
+.film-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+}
+
+.film-list__item {
+    width: 100%;
+    @media screen and (min-width: 480px) and (max-width: 767px) {
+        margin-right: auto;
+        margin-left: auto;
+    }
+
+    @include tablet {
+        width: calc((100% - 30px) / 2);
+    }
+
+    @include desktop {
+        width: calc((100% - 60px) / 3);
+    }
+}
+
+// .film-list__top-wrap {
+//     position: relative;
+//     overflow: hidden;
+// }
+
+.film-list__link {
+    width: 100%;
+    height: 100%;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover, &:focus {
+         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+         1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+        display: flex;
+        flex-direction: column;  
+    }
+}
+
+.subject {
+    padding: 20px 24px;
+    border: 1px solid #EEEEEE;
+    border-top: none;
+    @media screen and (min-width: 481px) and (max-width: 767px){
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
+        justify-content: flex-start;
+    }
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+        flex-grow: 1;
+    }
+}
+
+.subject__title {
+    margin-bottom: 4px;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+    color: var(--first-text-color);
+}
+
+.subject__text {
+    font-size: 16px;
+    line-height: 1.8;
+    letter-spacing: 0.03em;
+    color: var(--second-text-color);
+}
