--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -2,25 +2,41 @@
     color: blue;
 }
 
+.list {
+    list-style: none;
+}
+
+.link {
+    display: block;
+    text-decoration: none;
+}
+
 .film-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 30px;
+    gap: 20px;
+
+    @media screen and (min-width: 768px) {
+        gap: 32px;
+    }
+
+    @media screen and (min-width: 1280px) {
+        row-gap: 16px;
+        column-gap: 32px;
+    }
 }
 
 .film-list__item {
     width: 100%;
-    @media screen and (min-width: 480px) and (max-width: 767px) {
-        margin-right: auto;
-        margin-left: auto;
+    margin-right: auto;
+    margin-left: auto;
+    
+    @media screen and (min-width: 768px) {
+        width: calc((100% - 32px) / 2);
     }
 
-    @include tablet {
-        width: calc((100% - 30px) / 2);
-    }
-
-    @include desktop {
-        width: calc((100% - 60px) / 3);
+    @media screen and (min-width: 1280px) {
+        width: calc((100% - 32px) / 3);
     }
 }
 
@@ -34,17 +50,17 @@
     height: 100%;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &:hover, &:focus {
-         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-         1px 4px 6px rgba(0, 0, 0, 0.16);
+            box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+            1px 4px 6px rgba(0, 0, 0, 0.16);
     }
 
-    @media screen and (min-width: 768px) and (max-width: 1199px) {
-        display: flex;
-        flex-direction: column;  
-    }
+    // @media screen and (min-width: 768px) and (max-width: 1199px) {
+    //     display: flex;
+    //     flex-direction: column;  
+    // }
 }
 
-.subject {
+.film-data {
     padding: 20px 24px;
     border: 1px solid #EEEEEE;
     border-top: none;
@@ -60,7 +76,7 @@
     }
 }
 
-.subject__title {
+.film-data__title {
     margin-bottom: 4px;
     font-weight: 700;
     font-size: 18px;
@@ -69,9 +85,20 @@
     color: var(--first-text-color);
 }
 
-.subject__text {
+.film-data__genres {
     font-size: 16px;
     line-height: 1.8;
     letter-spacing: 0.03em;
     color: var(--second-text-color);
+}
+
+// .film-data__year {
+
+// }
+
+.film-data__year::before {
+    height: 22px; 
+    // // padding-right: 10px;
+    // padding-left: 10px;
+    border-right: 1px solid rgba(33, 33, 33, 0.2); 
 }
