add change in common css and header html

--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -16,3 +16,22 @@
       max-width: 1280px;
     }
 }
+
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+button {
+  cursor: pointer;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+
