--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -28,7 +28,7 @@
                 />
                 <button type="search_btn">
                     <svg class="search_icon" width="12" heigth="12">
-                        <use href=""></use>
+                        <use></use>
                     </svg>
                 </button>
             </form>
