Делает backdrop modal

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,5 +1,8 @@
 @import './common';
+@import './reset';
+
 // @import './example';
+@import './modal/modal-main';
 @import './header';
 @import './main';
 @import './partials/pagination';
