--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,4 @@
 <footer class="footer">
-    <h2>Hello Footer</h2>
+  <h2>Hello Footer</h2>
+  <button type="button" data-modal-open>open modal</button>
 </footer>
