--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -35,8 +35,11 @@
                         </div>
                         <div class="film-data">
                             <h2 class="film-data__title">ONCE UPON A TIME... IN HOLLYWOOD</h2>
-                            <p class="film-data__genres">Drama, Comedy</p>
-                            <p class="film-data__year">2019</p>
+                            <div class="film-data__info">
+                                <p class="film-data__genres">Drama, Comedy</p>
+                                <p class="film-data__year">2019</p>
+                            </div>
+                            
                         </div>
                     </a>
                 </li>
@@ -73,8 +76,10 @@
                       </div>
                       <div class="film-data">
                           <h2 class="film-data__title">ONCE UPON A TIME... IN HOLLYWOOD</h2>
-                          <p class="film-data__genres">Drama, Comedy</p>
-                          <p class="film-data__year">2019</p>
+                          <div class="film-data__info">
+                            <p class="film-data__genres">Drama, Comedy</p>
+                            <p class="film-data__year">2019</p>
+                        </div>
                       </div>
                   </a>
                 </li>
@@ -111,8 +116,10 @@
                       </div>
                       <div class="film-data">
                           <h2 class="film-data__title">ONCE UPON A TIME... IN HOLLYWOOD</h2>
-                          <p class="film-data__genres">Drama, Comedy</p>
-                          <p class="film-data__year">2019</p>
+                          <div class="film-data__info">
+                            <p class="film-data__genres">Drama, Comedy</p>
+                            <p class="film-data__year">2019</p>
+                        </div>
                       </div>
                   </a>
                 </li>
@@ -149,8 +156,10 @@
                       </div>
                       <div class="film-data">
                           <h2 class="film-data__title">ONCE UPON A TIME... IN HOLLYWOOD</h2>
-                          <p class="film-data__genres">Drama, Comedy</p>
-                          <p class="film-data__year">2019</p>
+                          <div class="film-data__info">
+                            <p class="film-data__genres">Drama, Comedy</p>
+                            <p class="film-data__year">2019</p>
+                        </div>
                       </div>
                   </a>
                 </li>
@@ -187,8 +196,10 @@
                       </div>
                       <div class="film-data">
                           <h2 class="film-data__title">ONCE UPON A TIME... IN HOLLYWOOD</h2>
-                          <p class="film-data__genres">Drama, Comedy</p>
-                          <p class="film-data__year">2019</p>
+                          <div class="film-data__info">
+                            <p class="film-data__genres">Drama, Comedy</p>
+                            <p class="film-data__year">2019</p>
+                        </div>
                       </div>
                   </a>
                 </li>
@@ -225,8 +236,10 @@
                       </div>
                       <div class="film-data">
                           <h2 class="film-data__title">ONCE UPON A TIME... IN HOLLYWOOD</h2>
-                          <p class="film-data__genres">Drama, Comedy</p>
-                          <p class="film-data__year">2019</p>
+                          <div class="film-data__info">
+                            <p class="film-data__genres">Drama, Comedy</p>
+                            <p class="film-data__year">2019</p>
+                        </div>
                       </div>
                   </a>
                 </li>
@@ -263,8 +276,10 @@
                       </div>
                       <div class="film-data">
                           <h2 class="film-data__title">ONCE UPON A TIME... IN HOLLYWOOD</h2>
-                          <p class="film-data__genres">Drama, Comedy</p>
-                          <p class="film-data__year">2019</p>
+                          <div class="film-data__info">
+                            <p class="film-data__genres">Drama, Comedy</p>
+                            <p class="film-data__year">2019</p>
+                        </div>
                       </div>
                   </a>
                 </li>
@@ -301,8 +316,10 @@
                       </div>
                       <div class="film-data">
                           <h2 class="film-data__title">ONCE UPON A TIME... IN HOLLYWOOD</h2>
-                          <p class="film-data__genres">Drama, Comedy</p>
-                          <p class="film-data__year">2019</p>
+                          <div class="film-data__info">
+                            <p class="film-data__genres">Drama, Comedy</p>
+                            <p class="film-data__year">2019</p>
+                        </div>
                       </div>
                   </a>
                 </li>
@@ -339,8 +356,10 @@
                       </div>
                       <div class="film-data">
                           <h2 class="film-data__title">ONCE UPON A TIME... IN HOLLYWOOD</h2>
-                          <p class="film-data__genres">Drama, Comedy</p>
-                          <p class="film-data__year">2019</p>
+                          <div class="film-data__info">
+                            <p class="film-data__genres">Drama, Comedy</p>
+                            <p class="film-data__year">2019</p>
+                        </div>
                       </div>
                   </a>
                 </li>
