--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -27,6 +27,7 @@
     height: 100%;
     margin-right: auto;
     margin-left: auto;
+    margin-bottom: 20px;
     padding-right: 20px;
     padding-left: 20px;
     border-radius: 5px;
@@ -66,8 +67,10 @@
     // padding-left: 20px;
     // width: 280px;
     // height: 440px;
-    width: 100%;
-    height: 100%;
+    width: 280px;
+    height: auto;
+    // width: 100%;
+    // height: 100%;
     margin-right: 0px;
 }
 
