update footer (without modal)

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,26 @@
 <footer class="footer">
-    <h2>Hello Footer</h2>
+  <div class="footer-text-all">
+    <span class="footer-text-part"
+      >&copy; 2022 | All Rights Reserved |&#160;
+    </span>
+    <span>
+      <span class="footer-text-part2"> Developed with </span>
+    </span>
+    <svg class="footer-label" width="14" height="13">
+      <use href="./images/icons.svg#icon-footer-label"></use>
+    </svg>
+
+    <span class="footer-text-link"
+      >by
+      <a
+        href="https://github.com/VKoshovec/teamProjJS6"
+        target="_blank"
+        class="footer-modal"
+        rel="noreferrer noopener"
+        aria-label="Our Github"
+        title="Our Github"
+        >GoIT Students
+      </a>
+    </span>
+  </div>
 </footer>
