change common styles and add utils

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,7 +11,7 @@
                 </a>
                 <ul class="nav_list">
                     <li class="nav_item">
-                        <a href="" class="link nav_home">Home</a>
+                        <a href="" class="link nav_home current_page">Home</a>
                     </li>
                     <li class="nav_item">
                         <a href="" class="link nav_library ">My Library</a>
