--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -4,16 +4,24 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+    padding-left: 20px;
+    padding-right: 20px;
     border: 1px solid red;
-    min-width: 320px;
-    max-width: 480px;
-
-    @media screen and (min-width: 768px) {
-        max-width: 768px;
+    
+    @media screen and (min-width: $mobile) {
+      width: $mobile;
     }
-
-    @media screen and (min-width: 1280px) {
-      max-width: 1280px;
+  
+    @media screen and (min-width: $tablet) {
+      width: $tablet;
+      padding-left: 75px;
+      padding-right: 75px;
+    }
+  
+    @media screen and (min-width: $desktop) {
+      width: $desktop;
+      padding-left: 71px;
+      padding-right: 71px;
     }
 }
 
@@ -32,6 +40,10 @@ ul {
   padding: 0;
   margin: 0;
   list-style: none;
+}
+
+link {
+  text-decoration: none;
 }
 
 
