--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -10,7 +10,7 @@
 .film-list {
     display: flex;
     flex-wrap: wrap;
-    flex-grow: 1;
+    // flex-grow: 1;
     padding-right: 20px;
     padding-left: 20px;
 
@@ -26,13 +26,17 @@
 
 .film-list__item {
     display: flex;
-    flex-grow: 1;
+    // flex-grow: 1;
     max-width: 100%;
     max-height: 100%;
     margin-right: 0;
     margin-left: 0;
     border-radius: 5px;
     overflow: hidden;
+
+    @media screen and (min-width: 481px) and (max-width: 767px){
+        flex-grow: 1;
+    }
 
     @media screen and (max-width: 767px) {
         margin-bottom: 20px;
