--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,22 +1,34 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
-
+.body {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+}
 .container {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    border: 1px solid red;
-    min-width: 320px;
-    max-width: 480px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid red;
+  min-width: 320px;
+  max-width: 480px;
 
-    @media screen and (min-width: 768px) {
-        max-width: 768px;
-    }
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+  }
 
-    @media screen and (min-width: 1280px) {
-      max-width: 1280px;
-    }
+  @media screen and (min-width: 1280px) {
+    max-width: 1280px;
+  }
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
 
 img {
   display: block;
@@ -33,7 +45,6 @@ ul {
   margin: 0;
   list-style: none;
 }
-
 
 .visuallyhidden {
   position: absolute;
