--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,10 +11,10 @@
                 </a>
                 <ul class="nav_list">
                     <li class="nav_item">
-                        <a href="" class="link nav_home current_page">Home</a>
+                        <a href="" class="nav_link nav_home current_page">Home</a>
                     </li>
                     <li class="nav_item">
-                        <a href="" class="link nav_library ">My Library</a>
+                        <a href="" class="nav_link nav_library ">My Library</a>
                     </li>
                 </ul>
             </nav>
@@ -33,6 +33,7 @@
                 </button>
             </form>
         </div>
-
+        <div class="js-warning header-warning"></div>
+        <div class="js-search-results header-warning"></div>
     </div> 
 </header>
