--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -2,62 +2,127 @@ html {
     overflow-y: scroll;
 }
 
-
-
 .header {
-    color:red;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: $mobile;
-    min-height: 230px;
+  color:red;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: $mobile;
+  min-height: 230px;
 
-    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-    url(../images/background-mob-1x.jpg);
-    background-color: $dark;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+  url(../images/background-mob-1x.jpg);
+  background-color: $dark;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 
-    @media screen and (max-width: ($tablet - 1)) and (min-device-pixel-ratio: 2),
-    screen and (max-width: ($tablet - 1)) and (min-resolution: 192dpi),
-    screen and (max-width: ($tablet - 1)) and (min-resolution: 2dppx) {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-    url(../images/background-mob-2x.jpg)}
+  @media screen and (max-width: ($tablet - 1)) and (min-device-pixel-ratio: 2),
+  screen and (max-width: ($tablet - 1)) and (min-resolution: 192dpi),
+  screen and (max-width: ($tablet - 1)) and (min-resolution: 2dppx) {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+  url(../images/background-mob-2x.jpg)}
 
+
+  @media screen and (min-width: $tablet) {
+      max-width: $tablet;
+  
+      background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+        url(../images/background-tab-1x.jpg);
+
+  @media screen and (max-width: ($desktop - 1)) and (min-device-pixel-ratio: 2),
+        screen and (max-width: ($desktop - 1)) and (min-resolution: 192dpi),
+        screen and (max-width: ($desktop - 1)) and (min-resolution: 2dppx) {
+        background-image: linear-gradient(
+            rgba(0, 0, 0, 0.56),
+            rgba(0, 0, 0, 0.56)
+          ),
+          url(../images/background-tab-2x.jpg);
+      }
+    }
+  
+    @media screen and (min-width: $desktop) {
+      max-width: $desktop;
+      background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+        url(../images/background-decs-1x.jpg);
+  
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: linear-gradient(
+            rgba(0, 0, 0, 0.56),
+            rgba(0, 0, 0, 0.56)),
+          url(../images/background-decs-2x.jpg);
+      }
+    }
+
+
+}
+
+.logo {
+    position: absolute;
+    top: 42px;
+    color: $svgColor;
+    cursor: pointer;
 
     @media screen and (min-width: $tablet) {
-        max-width: $tablet;
-    
-        background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-          url(../images/background-tab-1x.jpg);
+        display: flex;
+        align-items: baseline;
+      }  
 
-    @media screen and (max-width: ($desktop - 1)) and (min-device-pixel-ratio: 2),
-          screen and (max-width: ($desktop - 1)) and (min-resolution: 192dpi),
-          screen and (max-width: ($desktop - 1)) and (min-resolution: 2dppx) {
-          background-image: linear-gradient(
-              rgba(0, 0, 0, 0.56),
-              rgba(0, 0, 0, 0.56)
-            ),
-            url(../images/background-tab-2x.jpg);
-        }
-      }
-    
-      @media screen and (min-width: $desktop) {
-        max-width: $desktop;
-        background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-          url(../images/background-decs-1x.jpg);
-    
-        @media screen and (min-device-pixel-ratio: 2),
-          screen and (min-resolution: 192dpi),
-          screen and (min-resolution: 2dppx) {
-          background-image: linear-gradient(
-              rgba(0, 0, 0, 0.56),
-              rgba(0, 0, 0, 0.56)),
-            url(../images/background-decs-2x.jpg);
-        }
-      }
+}
 
+.logo_text {
+    @media screen and (max-width: ($tablet - 1)) {
+    display: none;
+    }
 
+    font-family: $mainFont;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 1.16;
+    color: $white;
+}
+
+.nav_list {
+  display: flex;
+  justify-content: flex-end;
+
+  margin-bottom: 40px;
+
+  font-family: $mainFont;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.17;
+  text-transform: uppercase;
+
+  color: $white;
+}
+
+.nav_item {
+  &:first-child {
+    margin-right: 39px;
+  }
+}
+
+.nav_link {
+  text-decoration: none;
+  color: inherit;
+}
+
+.current_page {
+  position: relative;
+
+  &::after {
+    content: '';
+
+    position: absolute;
+    bottom: -3px;
+    left: 0;
+
+    height: 3px;
+    width: 100%;
+    background-color: $accentColor;
+  }
 }
 
 .search-form {
@@ -81,4 +146,26 @@ html {
     
      
 
+}
+
+.header_warning {
+  position: absolute;
+  top: 155px;
+  font-size: 14px;
+  line-height: 1.14;
+  color: $warningColor;
+
+  @media screen and (max-width: ($tablet - 1)) {
+    max-width: ($mobile - 40);
+  }
+
+  @media screen and (min-width: $tablet) {
+    width: ($tablet - 152);
+    text-align: center;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: ($desktop - 142);
+    text-align: center;
+  }
 }
