--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,3 +1,8 @@
 .header {
     color:red;
 }
+.liberty-btn{
+    min-width: 148px;
+    height: 42px;
+    border: 1px solid #FFFFFF;border-radius: 5px;
+}
