--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -37,7 +37,7 @@
                             <h2 class="film-data__title">ONCE UPON A TIME... IN HOLLYWOOD</h2>
                             <div class="film-data__info">
                                 <p class="film-data__genres">Drama, Comedy</p>
-                                <p class="film-data__year">2019</p>
+                                <p class="film-data__year">| 2019</p>
                             </div>
                             
                         </div>
@@ -78,7 +78,7 @@
                           <h2 class="film-data__title">ONCE UPON A TIME... IN HOLLYWOOD</h2>
                           <div class="film-data__info">
                             <p class="film-data__genres">Drama, Comedy</p>
-                            <p class="film-data__year">2019</p>
+                            <p class="film-data__year">| 2019</p>
                         </div>
                       </div>
                   </a>
@@ -118,7 +118,7 @@
                           <h2 class="film-data__title">ONCE UPON A TIME... IN HOLLYWOOD</h2>
                           <div class="film-data__info">
                             <p class="film-data__genres">Drama, Comedy</p>
-                            <p class="film-data__year">2019</p>
+                            <p class="film-data__year">| 2019</p>
                         </div>
                       </div>
                   </a>
@@ -158,7 +158,7 @@
                           <h2 class="film-data__title">ONCE UPON A TIME... IN HOLLYWOOD</h2>
                           <div class="film-data__info">
                             <p class="film-data__genres">Drama, Comedy</p>
-                            <p class="film-data__year">2019</p>
+                            <p class="film-data__year">| 2019</p>
                         </div>
                       </div>
                   </a>
@@ -198,7 +198,7 @@
                           <h2 class="film-data__title">ONCE UPON A TIME... IN HOLLYWOOD</h2>
                           <div class="film-data__info">
                             <p class="film-data__genres">Drama, Comedy</p>
-                            <p class="film-data__year">2019</p>
+                            <p class="film-data__year">| 2019</p>
                         </div>
                       </div>
                   </a>
@@ -238,7 +238,7 @@
                           <h2 class="film-data__title">ONCE UPON A TIME... IN HOLLYWOOD</h2>
                           <div class="film-data__info">
                             <p class="film-data__genres">Drama, Comedy</p>
-                            <p class="film-data__year">2019</p>
+                            <p class="film-data__year">| 2019</p>
                         </div>
                       </div>
                   </a>
@@ -278,7 +278,7 @@
                           <h2 class="film-data__title">ONCE UPON A TIME... IN HOLLYWOOD</h2>
                           <div class="film-data__info">
                             <p class="film-data__genres">Drama, Comedy</p>
-                            <p class="film-data__year">2019</p>
+                            <p class="film-data__year">| 2019</p>
                         </div>
                       </div>
                   </a>
@@ -318,7 +318,7 @@
                           <h2 class="film-data__title">ONCE UPON A TIME... IN HOLLYWOOD</h2>
                           <div class="film-data__info">
                             <p class="film-data__genres">Drama, Comedy</p>
-                            <p class="film-data__year">2019</p>
+                            <p class="film-data__year">| 2019</p>
                         </div>
                       </div>
                   </a>
@@ -358,7 +358,7 @@
                           <h2 class="film-data__title">ONCE UPON A TIME... IN HOLLYWOOD</h2>
                           <div class="film-data__info">
                             <p class="film-data__genres">Drama, Comedy</p>
-                            <p class="film-data__year">2019</p>
+                            <p class="film-data__year">| 2019</p>
                         </div>
                       </div>
                   </a>
@@ -366,8 +366,7 @@
             </ul>
         </div>
     </section>
-  <h2>Hello Main</h2>
-  <div class="container">
+    <div class="container">
     <div class="loadMore">
       <div class="page back">
         <svg width="16" height="16">
