--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -1,6 +1,3 @@
-.main {
-    color: blue;
-}
 
 .section {
     padding-top: 20px;
@@ -26,7 +23,7 @@
 
 .film-list__item {
     display: flex;
-    // flex-grow: 1;
+    flex-grow: 1;
     max-width: 100%;
     max-height: 100%;
     margin-right: 0;
@@ -34,9 +31,10 @@
     border-radius: 5px;
     overflow: hidden;
 
-    @media screen and (min-width: 481px) and (max-width: 767px){
-        flex-grow: 1;
-    }
+    // @media screen and (min-width: 481px) and (max-width: 767px){
+    //     // flex-grow: 1;
+    //     // justify-content: center;
+    // }
 
     @media screen and (max-width: 767px) {
         margin-bottom: 20px;
@@ -52,13 +50,13 @@
 }
 
 .film-list__item:last-child {
-    @media screen and (max-width: 767px) {
-        margin-bottom: 0px;
+    @media screen and (min-width: 768px) {
+        margin-bottom: 40px;
     }
 }
 
 .film-list__top-wrap {
-    max-width: 100%;
+    width: 100%;
     height: auto;
     margin: 0;
 }
@@ -79,17 +77,23 @@
 }
 
 .film-data {
-    display: block;
     height: 32px;
-    // padding-top: 10px;
+    padding-top: 10px;
+    // padding-bottom: 5px;
     border: 1px solid #EEEEEE;
     border-top: none;
-    justify-content: flex-start;
+    // justify-content: flex-start;
+
+    // @media screen and (min-width: 768px) {
+    //     display: flex;
+    //     justify-content: center;
+    //     align-items: center;
+    // }
     
     @media screen and (min-width: 1280px) {
-        // height: 48px; 
+        height: 48px; 
         // padding-top: 12px;
-        margin-top: 12px;
+        // margin-top: 12px;
     }
 
     // @media screen and (min-width: 481px) and (max-width: 767px){
@@ -106,7 +110,8 @@
 
 .film-data__title {
     display: block;
-    padding-bottom: 20px;
+    height: 10px;
+    // padding-bottom: 10px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
@@ -123,8 +128,10 @@
 
 .film-data__info {
     display: flex;
-    text-align: end;
- // height: 10px;
+    // justify-content: flex-end;
+   
+    // text-align: end;
+    height: 10px;
 
     font-family: 'Roboto';
     font-style: normal;
@@ -133,14 +140,16 @@
     line-height: 1.33px;
 
     @media screen and (min-width: 1280px) {
+        height: 20px;
         font-size: 20px;
         line-height: 1.2px;
     }
 }
 
 .film-data__genres {
-    // display: block;
-    padding-right: 5px;
+    display: flex;
+    height: 10px;
+    // padding-right: 5px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
@@ -149,13 +158,14 @@
     color: #FF6B08;
 
     @media screen and (min-width: 1280px) {
+        align-items: flex-end;
         font-size: 20px;
         line-height: 1.2px;
     }
 }
 
 .film-data__year {
-    // display: block;
+    display: flex;
     height: 10px;
     padding-left: 5px;
     font-family: 'Roboto';
@@ -164,10 +174,10 @@
     font-size: 12px;
     line-height: 1.33px;
     color: #FF6B08;
-    border-left: 1px solid #FF6B08; 
+    // border-left: 1px solid #FF6B08; 
 
     @media screen and (min-width: 1280px) {
-        height: 20px;
+        align-items: flex-end;
         font-size: 20px;
         line-height: 1.2px;
     }
