--- a/src/sass/utils/_reset.scss
+++ b/src/sass/utils/_reset.scss
@@ -2,25 +2,25 @@ p {
     margin: 0;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin: 0;
-}
+// h1,
+// h2,
+// h3,
+// h4,
+// h5,
+// h6 {
+//     margin: 0;
+// }
 
-ul {
-    padding: 0;
-    margin: 0;
-}
+// ul {
+//     padding: 0;
+//     margin: 0;
+// }
 
-img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-}
+// img {
+//     display: block;
+//     max-width: 100%;
+//     height: auto;
+// }
 
 .list {
     list-style: none;
