--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -18,7 +18,7 @@
                     </li>
                 </ul>
             </nav>
-            <form class="search_form id="search_form">
+            <form class="search_form" id="search_form">
                 <input  
                 type="text"
                 name="query"
@@ -32,6 +32,8 @@
                     </svg>
                 </button>
             </form>
+             <button type="button" class="liberty__btn">WATCHED</button>
+             <button type="button" class="liberty__btn">QUEUE</button>
         </div>
 
     </div> 
