--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,8 +1,64 @@
 .header {
     color:red;
 }
-.liberty-btn{
-    min-width: 148px;
-    height: 42px;
-    border: 1px solid #FFFFFF;border-radius: 5px;
+.header__liberty{
+    background-image:linear-gradient(rgba(0, 0, 0, 0.56),rgba(0, 0, 0, 0.56)), url(/src/images/header-liberty\ mobile\ 1x.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    @media (min-device-pixel-ratio:2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+            background-image:linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+                url(/src/images/header-liberty\ mobile\ 2x.jpg)
+};
+
+   @media screen and (min-width:768px){
+    background-image:linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+    url(/src/images/header-liberty\ \ tablet\ 1x.jpg);
+    @media (min-device-pixel-ratio: 2),
+                (min-resolution: 192dpi),
+                (min-resolution: 2dppx) {
+                    background-image:linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+                    url(/src/images/header-liberty\ \ tablet\ 2x.jpg) 
+                }
+}
+@media screen and (min-width:1280px){
+    background-image:linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+    url(/src/images/header-liberty\ \ decktop\ 1x.jpg);
+    @media (min-device-pixel-ratio: 2),
+                (min-resolution: 192dpi),
+                (min-resolution: 2dppx) {
+                    background-image:linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+                    url(/src/images/header-liberty\ \ decktop\ 2x.jpg) 
+                }
+}
+}
+.liberty__btn{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height:16px;
+    min-width: 152px;
+    height: 44px;
+    border: 1px solid #FFFFFF;
+    border-radius: 5px;
+    color: #FFFFFF;
+    background-color: transparent;
+    cursor: pointer;
+}
+.active__btn{
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 500;
+font-size: 12px;
+line-height: 16px;
+min-width: 152px;
+height: 44px;
+background: #FF6B01;
+box-shadow: 0px 8px 43px rgba(255, 107, 1, 0.6);
+border-radius: 5px;
+border: transparent;
+color: #FFFFFF;
+cursor: pointer;
 }
