--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -11,6 +11,10 @@
   min-width: 320px;
   max-width: 480px;
 
+  @media screen and (min-width: 481px) {
+    max-width: 767px;
+  }
+
   @media screen and (min-width: 768px) {
     max-width: 768px;
   }
@@ -32,7 +36,7 @@ p {
 
 img {
   display: block;
-  max-width: 100%;
+  width: 100%;
   height: auto;
 }
 
