--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -23,24 +23,24 @@
 
 .film-list__item {
     display: flex;
+    justify-content: center;
     flex-grow: 1;
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
     margin-right: 0;
     margin-left: 0;
     border-radius: 5px;
     overflow: hidden;
 
-    // @media screen and (min-width: 481px) and (max-width: 767px){
-    //     // flex-grow: 1;
-    //     // justify-content: center;
+    // @media screen and (min-width: 320px) and (max-width: 767px) {
+        
     // }
 
     @media screen and (max-width: 767px) {
         margin-bottom: 20px;
     }
     
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 768px) and (max-width: 1279px){
         width: calc((100% - 32px) / 2);
     }
 
@@ -55,11 +55,11 @@
     }
 }
 
-.film-list__top-wrap {
-    width: 100%;
-    height: auto;
-    margin: 0;
-}
+// .film-list__top-wrap {
+//     width: 100%;
+//     height: auto;
+//     margin: 0;
+// }
 
 .film-list__link {
     width: 100%;
