--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,8 +1,8 @@
 <main class="main">
   <section class="filmoteka section">
-        <div class="container">
-              <ul class="film-list list">
-                <li class="film-list__item">
+    <div class="container">
+      <ul class="film-list list">
+        <!-- <li class="film-list__item">
                     <a href="" class="film-list__link link">
                         <div class="film-list__top-wrap">
                             <picture>
@@ -362,10 +362,10 @@
                         </div>
                       </div>
                   </a>
-                </li>
-            </ul>
-        </div>
-    </section>
+                </li> -->
+      </ul>
+    </div>
+  </section>
   <h2>Hello Main</h2>
   <div class="container">
     <div class="loadMore">
