Делает логику открытия-закрытия модалки

--- a/src/partials/modal-main.html
+++ b/src/partials/modal-main.html
@@ -1,6 +1,6 @@
-<div class="backdrop is-hidden" data-modal>
+<div class="backdrop is-hidden js-backdrop" data-modal>
   <div class="main-modal js-main-modal" data-modal-close>
-    <button class="btn-close-modal" type="button">X</button>
+    <button class="btn-close-modal js-btn-close-modal" type="button">X</button>
     <div class="card-film film">
       <div class="film__poster">
         <img
@@ -34,28 +34,6 @@
             <li class="item-right"><span>A FISTFUL OF LEAD</span></li>
             <li class="item-right"><span>Western</span></li>
           </ul>
-          <!-- <ul class="film__list-info list">
-          <li class="film__item-info">
-            <span class="left-item">Vote / Votes</span>
-            <div class="rating">
-              <span class="vote right-item">8.6</span>
-              /
-              <span class="votes right-item">1200</span>
-            </div>
-          </li>
-          <li class="film__item-info">
-            <span class="left-item">Popularity</span>
-            <span class="right-item">100.2</span>
-          </li>
-          <li class="film__item-info">
-            <span class="left-item">Original Title</span>
-            <span class="right-item">A FISTFUL OF LEAD</span>
-          </li>
-          <li class="film__item-info">
-            <span class="left-item">Genre</span>
-            <span class="right-item">Western</span>
-          </li>
-        </ul> -->
         </div>
 
         <p class="film__about">About</p>
