--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,17 +1,16 @@
-
 <header class="header">
     <div class="container">
         <div class="header_wrapper">
             <nav class="navigation">
                 <a class="logo link" href=" ">
-                    <svg>
-                        <use></use>
+                    <svg class="logo__icon" width="24" height="24">
+                        <use href="/src/images/general-sprait.svg#icon-film"></use>
                     </svg>
                     <span class="logo_text">Filmoteka</span>
                 </a>
                 <ul class="nav_list">
                     <li class="nav_item">
-                        <a href="" class="link nav_home">Home</a>
+                        <a href="" class="link nav_home active">Home</a>
                     </li>
                     <li class="nav_item">
                         <a href="" class="link nav_library ">My Library</a>
@@ -19,19 +18,25 @@
                 </ul>
             </nav>
             <form class="search_form" id="search_form">
+                <div class="input-wrapper">
                 <input  
                 type="text"
                 name="query"
                 autocomplete="off"
-                placeholder="Поиск фильмов"
+                placeholder="Movie search"
                 class="search-field" 
                 />
-                <button type="search_btn">
-                    <svg class="search_icon" width="12" heigth="12">
-                        <use></use>
+                <svg class="search_icon" width="12" height="12">
+                    <use href="/src/images/general-sprait.svg#icon-search-2"></use>
+                </svg>
+                              <!-- <button type="button" class="search_btn">
+                    <svg class="search_icon" width="12" height="12">
+                        <use href="/src/images/general-sprait.svg#icon-search-2"></use>
                     </svg>
-                </button>
+                </button> -->
+            </div>
             </form>
+            
              <button type="button" class="liberty__btn">WATCHED</button>
              <button type="button" class="liberty__btn">QUEUE</button>
         </div>
