--- a/src/sass/partials/_pagination.scss
+++ b/src/sass/partials/_pagination.scss
@@ -6,6 +6,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  max-width: max-content;
+  margin: 0 auto;
+}
+
+.pages {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .page {
@@ -34,6 +42,23 @@
     cursor: pointer;
   }
 }
+
+.points {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  color: #000000;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: calc(16 / 12);
+  border: none;
+  border-radius: 5px;
+}
+
 .back {
   display: flex;
   border: none;
