--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -139,3 +139,18 @@
         line-height: 1.2px;
     }
 }
+
+.scrollBtn{
+position:fixed;
+top:auto;
+bottom:10px;
+left:auto;
+right:10px;
+width: 50px;
+height: 50px;
+background-color: transparent;
+border: transparent;
+& svg{
+    fill: #726963;
+}
+}
