--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -368,21 +368,13 @@
     </section>
     <div class="container">
     <div class="loadMore">
-      <div class="page back">
+      <div class="page back" data-nav="back">
         <svg width="16" height="16">
           <use href="./images/icons.svg#icon-left"></use>
         </svg>
       </div>
-      <div class="page">1</div>
-      <div class="page">...</div>
-      <div class="page">14</div>
-      <div class="page current">15</div>
-      <div class="page">13</div>
-      <div class="page">16</div>
-      <div class="page">17</div>
-      <div class="page">...</div>
-      <div class="page">20</div>
-      <div class="page next">
+      <div class="pages"></div>
+      <div class="page next" data-nav="next">
         <svg width="16" height="16">
           <use href="./images/icons.svg#icon-right"></use>
         </svg>
