Делает логику открытия закрытия новый за 23.12.22

--- a/src/partials/modal-main.html
+++ b/src/partials/modal-main.html
@@ -1,6 +1,6 @@
-<div class="backdrop is-hidden" data-modal>
+<div class="backdrop js-backdrop is-hidden" data-modal>
   <div class="main-modal js-main-modal" data-modal-close>
-    <button class="btn-close-modal" type="button">X</button>
+    <button class="btn-close-modal js-btn-close-modal" type="button">X</button>
     <div class="card-film film">
       <div class="film__poster">
         <img
@@ -22,7 +22,7 @@
             <li class="item-left">
               <span>Original Title </span>
             </li>
-            <li class="item-left"><span>Genre Western</span></li>
+            <li class="item-left"><span>Genre</span></li>
           </ul>
           <ul class="film-list__right">
             <li class="item-right item-right--vote">
@@ -34,28 +34,6 @@
             <li class="item-right"><span>A FISTFUL OF LEAD</span></li>
             <li class="item-right"><span>Western</span></li>
           </ul>
-          <!-- <ul class="film__list-info list">
-          <li class="film__item-info">
-            <span class="left-item">Vote / Votes</span>
-            <div class="rating">
-              <span class="vote right-item">8.6</span>
-              /
-              <span class="votes right-item">1200</span>
-            </div>
-          </li>
-          <li class="film__item-info">
-            <span class="left-item">Popularity</span>
-            <span class="right-item">100.2</span>
-          </li>
-          <li class="film__item-info">
-            <span class="left-item">Original Title</span>
-            <span class="right-item">A FISTFUL OF LEAD</span>
-          </li>
-          <li class="film__item-info">
-            <span class="left-item">Genre</span>
-            <span class="right-item">Western</span>
-          </li>
-        </ul> -->
         </div>
 
         <p class="film__about">About</p>
@@ -70,7 +48,7 @@
           double crossed – but by who and how?
         </p>
         <div class="button-wrapper">
-          <button class="btn-modal film-btn__watched active">
+          <button class="btn-modal film-btn__watched is-active">
             add to Watched
           </button>
           <button class="btn-modal film-btn__queue">add to queue</button>
