--- a/src/sass/modal/_modal-main.scss
+++ b/src/sass/modal/_modal-main.scss
@@ -241,7 +241,7 @@ item-right--popularity {
     width: 136px;
   }
 }
-.btn-modal.active {
+.btn-modal.is-active {
   color: #fff;
   background: #ff6b01;
   border: transparent;
