--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -4,9 +4,8 @@
   text-align: center;
   @media screen and (max-width: 767px) {
     padding-top: 29px;
-    padding-right: 36px;
+
     padding-bottom: 30px;
-    padding-left: 48px;
   }
   @media screen and (min-width: 768px) {
     padding-top: 30px;
@@ -40,11 +39,35 @@
 .footer-label {
   margin-left: 10px;
   margin-right: 10px;
+  animation: heartbeat 1.5s ease-in-out infinite both;
 }
-
+@keyframes heartbeat {
+  from {
+    transform: scale(1);
+    transform-origin: center center;
+    animation-timing-function: ease-out;
+  }
+  10% {
+    transform: scale(0.91);
+    animation-timing-function: ease-in;
+  }
+  17% {
+    transform: scale(0.98);
+    animation-timing-function: ease-out;
+  }
+  33% {
+    transform: scale(0.87);
+    animation-timing-function: ease-in;
+  }
+  45% {
+    transform: scale(1);
+    animation-timing-function: ease-out;
+  }
+}
 .footer-modal {
   color: #545454;
   text-decoration: underline;
+  cursor: pointer;
 }
 
 .footer-modal:hover,
