--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -12,15 +12,7 @@
 
     <span class="footer-text-link"
       >by
-      <a
-        href="https://github.com/VKoshovec/teamProjJS6"
-        target="_blank"
-        class="footer-modal"
-        rel="noreferrer noopener"
-        aria-label="Our Github"
-        title="Our Github"
-        >GoIT Students
-      </a>
+      <span class="footer-modal"> GoIT Students </span>
     </span>
   </div>
 </footer>
