--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -4,6 +4,7 @@
 
 // @import './example';
 @import './modal/modal-main';
+@import './modal/modal-team';
 @import './header';
 @import './main';
 @import './partials/pagination';
